Bug 79221 - Border down and right don't have good view, but good export in PDF
Summary: Border down and right don't have good view, but good export in PDF
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.4.2 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Tamás Zolnai
URL:
Whiteboard: target:4.4.0 target:4.2.6 target:4.3.1
Keywords: bibisected, regression
Depends on:
Blocks: mab4.2
  Show dependency treegraph
 
Reported: 2014-05-25 18:07 UTC by vulcain
Modified: 2015-12-17 08:14 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshoot of LibreOffice's view (150.46 KB, image/png)
2014-05-25 18:07 UTC, vulcain
Details
ODF: text with some borders (37.66 KB, application/vnd.oasis.opendocument.text)
2014-05-25 18:09 UTC, vulcain
Details
When you export the ODF in PDF (15.50 KB, application/pdf)
2014-05-25 18:09 UTC, vulcain
Details
When you print the ODF in file (49.16 KB, application/postscript)
2014-05-25 18:10 UTC, vulcain
Details
close up of how it looks in LibO 4.2 (38.69 KB, image/jpeg)
2014-05-25 23:05 UTC, Yousuf Philips (jay) (retired)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description vulcain 2014-05-25 18:07:49 UTC
Created attachment 99786 [details]
screenshoot of LibreOffice's view

On Ubuntu 12.04 x86_64 with 4.3.0.0.beta1
Build ID: 2e39c7e59c8fc8b16a54c3d981dceef27fb0c07f

You could had border around a word or group of words. With a simple line, the border is ok. But if you choose a big width, double line or line with dash or line with point, in LibreOffice's view, you don't see the line up and the line right like the other.

I tdon't know if it's just a problem of view. When you export in PDF, the view is like you want in Evince 3.4 or Firefox 29 (don't test in other PDF readers) but if you print in file, is not like you want.
Comment 1 vulcain 2014-05-25 18:09:17 UTC
Created attachment 99787 [details]
ODF: text with some borders
Comment 2 vulcain 2014-05-25 18:09:48 UTC
Created attachment 99788 [details]
When you export the ODF in PDF
Comment 3 vulcain 2014-05-25 18:10:16 UTC
Created attachment 99789 [details]
When you print the ODF in file
Comment 4 vulcain 2014-05-25 18:14:49 UTC
Ouups. 
I write up, but it's down.

See the attachment, the first.
Comment 5 Yousuf Philips (jay) (retired) 2014-05-25 23:04:25 UTC
Confirmed in Linux Mint with 4.2.4 and 4.3 beta1. The right and bottom borders of the set character borders arent shown correctly.
Comment 6 Yousuf Philips (jay) (retired) 2014-05-25 23:05:01 UTC
Created attachment 99811 [details]
close up of how it looks in LibO 4.2
Comment 7 pierre-yves samyn 2014-05-26 07:41:21 UTC
Hi

Reproduce on windows 7/64 & Version: 4.3.0.0.beta1
Build ID: 2e39c7e59c8fc8b16a54c3d981dceef27fb0c07f

I change OS to All

Regards
Pierre-Yves
Comment 8 Firas Hanife 2014-05-26 12:13:37 UTC
Reproduced on openSUSE 13.1 with
Version: 4.3.0.0.beta1
Build ID: 2e39c7e59c8fc8b16a54c3d981dceef27fb0c07f
Comment 9 vulcain 2014-06-02 21:35:22 UTC
I reproduce this bug with LibreOffice 4.2.5.1 Build ID: 881bb88abfe2992c6cede97c23e64a9885de87de on Ubuntu 12.04 x86_64
Comment 10 vulcain 2014-06-02 21:38:45 UTC
This feature was introduced in LibreOffice 4.2.x
https://wiki.documentfoundation.org/ReleaseNotes/4.2#Writer

Character border: format one or more characters with a border. fdo#35155 (Tamás Zolnai)

    Supported file formats: ODT, HTML, DOC, DOCX, RTF
    Setting: Format ▸ Character ▸ Borders (tab) 


We have a good view with LibreOffice 4.2.0.3 Build ID: c63c03decdf780d8fb80823950665b782ec9ecd0 

So, we have a regression between 4.2.0.3 and 4.2.5.1
Comment 11 vulcain 2014-06-02 22:02:36 UTC
Don't reproduce with LibreOffice 4.2.3.3 Buil ID: 420m0(Build:3) form Canonical on Ubuntu 14.04.0

I reproduce the bug in LibreOffice 4.2.4.2 Build ID: 63150712c6d317d27ce2db16eb94c2f3d7b699f8 on Ubuntu 12.04 x86_64
Comment 12 Yousuf Philips (jay) (retired) 2014-06-04 23:43:17 UTC
added bibisect request
Comment 13 Xisco Faulí 2014-06-06 10:30:33 UTC
 e34eadbaf87d8e71ebd9cf34e6acc628ad0b4650 is the first bad commit
commit e34eadbaf87d8e71ebd9cf34e6acc628ad0b4650
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Mon May 12 01:11:45 2014 +0000

    source-hash-7b56d303300fbf592473b28b654fd22fec110962
    
    commit 7b56d303300fbf592473b28b654fd22fec110962
    Author:     Michael Stahl <mstahl@redhat.com>
    AuthorDate: Tue Mar 18 21:53:18 2014 +0100
    Commit:     Michael Stahl <mstahl@redhat.com>
    CommitDate: Tue Mar 18 22:18:11 2014 +0100
    
        gbuild: AutoInstall: substitute "." in jar names
    
        Change-Id: Icdb628164c53d212871171ab7dea2617f79a7a36

:100644 100644 7965c755fb72ba88231db3c3a4a66c1f7c0cd6ca 55e483c4a724436ee0e792f72b90a3d301c77064 M	ccache.log
:100644 100644 d90c38e55de33c7295b0c7d66efff0e8321fe748 109c99441737bb49205950d8d26f994ab7ade8ca M	commitmsg
:100644 100644 966273d2182663bce1c3dd264d0cd3e05bf465a8 489b61544cecbe2b2fc066ce04098712be6374d8 M	make.log
:040000 040000 0c7c43d1695822d3b828e26c62d0be3035934b40 8d40ab0ff1362b98fa7646afb94a246acb54cd98 M	opt

# bad: [423a84c4f7068853974887d98442bc2a2d0cc91b] source-hash-c15927f20d4727c3b8de68497b6949e72f9e6e9e
# good: [65fd30f5cb4cdd37995a33420ed8273c0a29bf00] source-hash-d6cde02dbce8c28c6af836e2dc1120f8a6ef9932
git bisect start 'latest' 'oldest'
# good: [e02439a3d6297a1f5334fa558ddec5ef4212c574] source-hash-6b8393474974d2af7a2cb3c47b3d5c081b550bdb
git bisect good e02439a3d6297a1f5334fa558ddec5ef4212c574
# good: [4850941efe43ae800be5c76e1102ab80ac2c085d] source-hash-980a6e552502f02f12c15bfb1c9f8e6269499f4b
git bisect good 4850941efe43ae800be5c76e1102ab80ac2c085d
# good: [a900e72b6357882284c5955bdf939bf14269f5fb] source-hash-dd1050b182260a26a1d0ba6d0ef3a6fecc3f4e07
git bisect good a900e72b6357882284c5955bdf939bf14269f5fb
# skip: [e80660c5a1d812cd04586dae1f22767fc3778c4a] source-hash-07c60c8ee2d1465544a6a39e57bc06b3690b8dfb
git bisect skip e80660c5a1d812cd04586dae1f22767fc3778c4a
# bad: [df9bcaed2faa2a8d11b19f877cdff3a12a887278] source-hash-6ba9692d8bbe3e3c245aca9a7c928e81178d05f1
git bisect bad df9bcaed2faa2a8d11b19f877cdff3a12a887278
# bad: [9d57c189d74551d2b3770cc81139ea10a62e672f] source-hash-5b5e62650354788e50b44f32c22b687b2018aba9
git bisect bad 9d57c189d74551d2b3770cc81139ea10a62e672f
# bad: [ce81582766413e76a63c047bfd6227ab12fcd866] source-hash-3d1b1eea83703919c43620f9adef05e5b24c4bed
git bisect bad ce81582766413e76a63c047bfd6227ab12fcd866
# good: [4e0843c411a14e3065f96f196eeb4d603664f97f] source-hash-51605bf98220d7e54dee20af17c33cebe23a0813
git bisect good 4e0843c411a14e3065f96f196eeb4d603664f97f
# good: [bfba063779a12bca219e4a9fba9bba8b67821ec1] source-hash-86a32589e90ee983159fb5b2c6a594428ab7d422
git bisect good bfba063779a12bca219e4a9fba9bba8b67821ec1
# good: [db29eee512d03b1dc0139b3752bbe7931b165377] source-hash-77b6c1602aaa0bd059077765e7fabb53d9e6ddeb
git bisect good db29eee512d03b1dc0139b3752bbe7931b165377
# bad: [e34eadbaf87d8e71ebd9cf34e6acc628ad0b4650] source-hash-7b56d303300fbf592473b28b654fd22fec110962
git bisect bad e34eadbaf87d8e71ebd9cf34e6acc628ad0b4650
# first bad commit: [e34eadbaf87d8e71ebd9cf34e6acc628ad0b4650] source-hash-7b56d303300fbf592473b28b654fd22fec110962
Comment 14 Xisco Faulí 2014-06-06 10:46:27 UTC
it looks like this issue was introduced by 2cd1673f41cb5bd8502a9a48a5721244660fe3a0. Right and bottom borders are displayed correctly if I revert the commit ( It doesn't mean I want it to be reverted ;-) )
Comment 15 Tamás Zolnai 2014-07-12 11:02:40 UTC
@Kohei

Can you check this bug? Or can we just revert this commit?
(I mean 2cd1673f41cb5bd8502a9a48a5721244660fe3a0)
Comment 16 Commit Notification 2014-07-22 12:25:17 UTC
Zolnai Tamas committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bdbf6cee5a3a012412699dba103b9f6430084722

fdo#79221: Wrong rendering of bottom and right character border



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 17 vulcain 2014-07-22 12:55:57 UTC
Zolnai Tamás: Do you know if it will be push to 4.2.4.7 (the last one comming in October 2014) or to 4.3.1 ??

This bug affected LibreOffice 4.2, a regression inside a minor. This bug will be fixed when the fix will be in LibreOffice 4.2, not in the master
Comment 18 Tamás Zolnai 2014-07-22 13:16:42 UTC
The fixes are on gerrit both for 4.2 branch and 4.3 branch:
https://gerrit.libreoffice.org/#/c/10456/
https://gerrit.libreoffice.org/#/c/10457/
Comment 19 Tamás Zolnai 2014-07-22 13:17:53 UTC
(In reply to comment #18)
> The fixes are on gerrit both for 4.2 branch and 4.3 branch:

Waiting for review.
Comment 20 Commit Notification 2014-07-22 13:25:01 UTC
Zolnai Tamas committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=17e55304319a6046e649adcfc5d3fbd573d5d43e&h=libreoffice-4-2

fdo#79221: Wrong rendering of bottom and right character border


It will be available in LibreOffice 4.2.7.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 21 Commit Notification 2014-07-22 13:25:15 UTC
Zolnai Tamas committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9ea31dcd4adb22c441c147c8078604ee7ab5bfe3&h=libreoffice-4-3

fdo#79221: Wrong rendering of bottom and right character border


It will be available in LibreOffice 4.3.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 22 Commit Notification 2014-07-22 16:17:05 UTC
Zolnai Tamas committed a patch related to this issue.
It has been pushed to "libreoffice-4-2-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=136cfba30fc49f66f1f365d13ee0e717c4cd8f53&h=libreoffice-4-2-6

fdo#79221: Wrong rendering of bottom and right character border


It will be available already in LibreOffice 4.2.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 23 vulcain 2014-07-31 07:18:58 UTC
Fix in LibreOffice 4.2.6.2 Build ID: 185f2ce4dcc34af9bd97dec29e6d42c39557298f on Ubuntu 12.04.4 x86_64


Thanks Zolnai Tamas and Xisco Faulí for your work.
Comment 24 Robinson Tryon (qubit) 2015-12-17 08:14:08 UTC Comment hidden (obsolete)