fdo#79221: Wrong rendering of bottom and right character border

Regression from 2cd1673f41cb5bd8502a9a48a5721244660fe3a0.

SetMirrorWidths() works only when there are two lines
(double border), but breaks one line borders.

Change-Id: I2727afbc071bb4038c6cef18e6b96c796ef3a8b9
(cherry picked from commit bdbf6cee5a3a012412699dba103b9f6430084722)