sw/source/core/layout/paintfrm.cxx
@@ -5080,7 +5080,8 @@ void PaintCharacterBorder(
 
     if( aBottomBorder )
     {
-        aBottomBorder->SetMirrorWidths(true);
+        if( aBottomBorder->isDouble() )
+            aBottomBorder->SetMirrorWidths(true);
 
         Point aLeftTop(
             aAlignedRect.Left(),
@@ -5118,7 +5119,8 @@ void PaintCharacterBorder(
 
     if( aRightBorder )
     {
-        aRightBorder->SetMirrorWidths(true);
+        if( aRightBorder->isDouble() )
+            aRightBorder->SetMirrorWidths(true);
 
         Point aLeftTop(
             aAlignedRect.Right() - aRightBorder.get().GetScaledWidth(),
